--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Functorhub</title>
-</head>
-<body>
-  Coming soon... Really soon.
-</body>
-</html>
+<div id="home">
+  <h2><i class="fa fa-bookmark"></i> Blog Posts</h2>
+  <ul id="blog-posts" class="posts">
+    $for(posts)$
+      <li><span>$date$ &raquo;</span><a href="$url$">$title$</a></li>
+    $endfor$
+  </ul>
+</div>
