--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Functorhub</title>
-</head>
-<body>
-  Coming soon... Really soon.
-</body>
-</html>
+Coming soon.
